--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,25 +50,33 @@ ul.accepted-payment-methods li.american-express span {
   width: 18px;
   background-image: url(../images/amex.png);
 }
+ul.accepted-payment-methods li.discover span {
+  width: 96px;
+  background-image: url(../images/discover.png);
+}
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1) {
   ul.accepted-payment-methods li.visa span {
-    background-image: url(../images/visa@x2.png);
+    background-image: url(../images/visa@2x.png);
     background-size: 50px 16px;
   }
   ul.accepted-payment-methods li.paypal span {
-    background-image: url(../images/paypal@x2.png);
+    background-image: url(../images/paypal@2x.png);
     background-size: 61px 16px;
   }
   ul.accepted-payment-methods li.mastercard span {
-    background-image: url(../images/mastercard@x2.png);
+    background-image: url(../images/mastercard@2x.png);
     background-size: 26px 16px;
   }
   ul.accepted-payment-methods li.google span {
-    background-image: url(../images/google@x2.png);
+    background-image: url(../images/google@2x.png);
     background-size: 77px 16px;
   }
   ul.accepted-payment-methods li.american-express span {
-    background-image: url(../images/amex@x2.png);
+    background-image: url(../images/amex@2x.png);
     background-size: 18px 16px;
+  }
+  ul.accepted-payment-methods li.discover span {
+    background-image: url(../images/discover@2x.png);
+    background-size: 96px 16px;
   }
 }
