Added Bitcoin and BTC logo

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -65,6 +65,14 @@ ul.accepted-payment-methods {
 			width:96px;
 			background-image: url(../images/discover.png);
 		}
+		&.bitcoin span {
+			width:77px;
+			background-image: url(../images/bitcoin.png);
+		}
+		&.btc span {
+			width:16px;
+			background-image: url(../images/btc.png);
+		}
 	}
 }
 
@@ -98,6 +106,14 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) {
 		li.discover span {
 			background-image: url(../images/discover@2x.png);
 			background-size: 96px 16px;
+		}
+		li.bitcoin span {
+			background-image: url(../images/bitcoin@2x.png);
+			background-size: 77px 16px;
+		}
+		li.btc span {
+			background-image: url(../images/btc@2x.png);
+			background-size: 16px 16px;
 		}
 	}
 
