--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,14 @@ ul.accepted-payment-methods li.discover span {
   width: 96px;
   background-image: url(../images/discover.png);
 }
+ul.accepted-payment-methods li.bitcoin span {
+  width: 77px;
+  background-image: url(../images/bitcoin.png);
+}
+ul.accepted-payment-methods li.btc span {
+  width: 16px;
+  background-image: url(../images/btc.png);
+}
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1) {
   ul.accepted-payment-methods li.visa span {
     background-image: url(../images/visa@2x.png);
@@ -78,5 +86,13 @@ ul.accepted-payment-methods li.discover span {
   ul.accepted-payment-methods li.discover span {
     background-image: url(../images/discover@2x.png);
     background-size: 96px 16px;
+  }
+  ul.accepted-payment-methods li.bitcoin span {
+    background-image: url(../images/bitcoin@2x.png);
+    background-size: 77px 16px;
+  }
+  ul.accepted-payment-methods li.btc span {
+    background-image: url(../images/btc@2x.png);
+    background-size: 16px 16px;
   }
 }
