--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -53,6 +53,10 @@ ul.accepted-payment-methods {
 			width:26px;
 			background-image: url(../images/mastercard.png);
 		}
+		&.maestro span {
+			width:26px;
+			background-image: url(../images/maestro.png);
+		}
 		&.google span {
 			width:77px;
 			background-image: url(../images/google.png);
@@ -93,6 +97,10 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) {
 		}
 		li.mastercard span {
 			background-image: url(../images/mastercard@2x.png);
+			background-size: 26px 16px;
+		}
+		li.maestro span {
+			background-image: url(../images/maestro@2x.png);
 			background-size: 26px 16px;
 		}
 		li.google span {
