Cash on delivery styles added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,10 @@ ul.accepted-payment-methods li.btc span {
   width: 16px;
   background-image: url(../images/btc.png);
 }
+ul.accepted-payment-methods li.cash-on-delivery span {
+  width: 47px;
+  background-image: url(../images/cod.png);
+}
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1) {
   ul.accepted-payment-methods li.visa span {
     background-image: url(../images/visa@2x.png);
@@ -102,5 +106,9 @@ ul.accepted-payment-methods li.btc span {
   ul.accepted-payment-methods li.btc span {
     background-image: url(../images/btc@2x.png);
     background-size: 16px 16px;
+  }
+    ul.accepted-payment-methods li.cash-on-delivery span {
+    background-image: url(../images/cod@2x.png);
+    background-size: 47px 16px;
   }
 }
