Cash on delivery image links added

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -77,6 +77,10 @@ ul.accepted-payment-methods {
 			width:16px;
 			background-image: url(../images/btc.png);
 		}
+		&.cash-on-delivery span {
+			width:47px;
+			background-image: url(../images/cod.png);
+		}
 	}
 }
 
@@ -122,6 +126,10 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) {
 		li.btc span {
 			background-image: url(../images/btc@2x.png);
 			background-size: 16px 16px;
+		}
+		li.cash-on-delivery span {
+			background-image: url(../images/cod@2x.png);
+			background-size: 47px 16px;
 		}
 	}
 
