Retina Ready! Verify it tough...
Please check if it works....

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -44,47 +44,47 @@ ul.accepted-payment-methods {
 			}
 		&.american-express span {
 			width:64px;
-			background-image: url(../images/logos-sprite-64px.png);
+			background-image: url(../images/logos-sprite.png);
 			background-position: -6px -6px;
 		}
 		&.bitcoin span {
 			width:64px;
-			background-image: url(../images/logos-sprite-64px.png);
+			background-image: url(../images/logos-sprite.png);
 			background-position: -6px -90px;
 		}
 		&.cash-on-delivery span {
 			width:64px;
-			background-image: url(../images/logos-sprite-64px.png);
+			background-image: url(../images/logos-sprite.png);
 			background-position: -6px -174px;
 		}
 		&.discover span {
 			width:64px;
-			background-image: url(../images/logos-sprite-64px.png);
+			background-image: url(../images/logos-sprite.png);
 			background-position: -6px -258px;
 		}
 		&.google span {
 			width:64px;
-			background-image: url(../images/logos-sprite-64px.png);
+			background-image: url(../images/logos-sprite.png);
 			background-position: -6px -342px;
 		}
 		&.maestro span {
 			width:64px;
-			background-image: url(../images/logos-sprite-64px.png);
+			background-image: url(../images/logos-sprite.png);
 			background-position: -6px -426px;
 		}
 		&.mastercard span {
 			width:64px;
-			background-image: url(../images/logos-sprite-64px.png);
+			background-image: url(../images/logos-sprite.png);
 			background-position: -6px -510px;
 		}
 		&.paypal span {
 			width:64px;
-			background-image: url(../images/logos-sprite-64px.png);
+			background-image: url(../images/logos-sprite.png);
 			background-position: -6px -594px;
 		}
 		&.visa span {
 			width:64px;
-			background-image: url(../images/logos-sprite-64px.png);
+			background-image: url(../images/logos-sprite.png);
 			background-position: -6px -678px;
 		}
 	}
@@ -98,40 +98,49 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) {
 
 	ul.accepted-payment-methods {
 		li.american-express span {
-			background-image: url(../images/logos@2x.png);
+			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
+      background position: -16px -16px
 		}
 		li.bitcoin span {
-			background-image: url(../images/logos@2x.png);
+			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
+      background position: -16px -248px
 		}
 		li.cash-on-delivery span {
-			background-image: url(../images/logos@2x.png);
+			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
+      background position: -16px -496px
 		}
 		li.discover span {
-			background-image: url(../images/logos@2x.png);
+			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
+      background position: -16px -728px
 		}
 		li.google span {
-			background-image: url(../images/logos@2x.png);
+			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
+      background position: -16px -960px
 		}
 		li.maestro span {
-			background-image: url(../images/logos@2x.png);
+			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
+      background position: -16px -1192px
 		}
 		li.mastercard span {
-			background-image: url(../images/logos@2x.png);
+			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
+      background position: -16px -1424px
 		}
 		li.paypal span {
-			background-image: url(../images/logos@2x.png);
+			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
+      background position: -16px -1656px
 		}
 		li.visa span {
-			background-image: url(../images/logos@2x.png);
+			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
+      background position: -16px -1888px
 		}
 	}
 }
