--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,85 +33,94 @@ ul.accepted-payment-methods li span {
 }
 ul.accepted-payment-methods li.american-express span {
   width: 64px;
-  background-image: url(../images/logos-sprite-64px.png);
+  background-image: url(../images/logos-sprite.png);
   background-position: -6px -6px;
 }
 ul.accepted-payment-methods li.bitcoin span {
   width: 64px;
-  background-image: url(../images/logos-sprite-64px.png);
+  background-image: url(../images/logos-sprite.png);
   background-position: -6px -90px;
 }
 ul.accepted-payment-methods li.cash-on-delivery span {
   width: 64px;
-  background-image: url(../images/logos-sprite-64px.png);
+  background-image: url(../images/logos-sprite.png);
    background-position: -6px -174px;
 }
 ul.accepted-payment-methods li.discover span {
   width: 64px;
-  background-image: url(../images/logos-sprite-64px.png);
+  background-image: url(../images/logos-sprite.png);
    background-position: -6px -258px;
 }
 ul.accepted-payment-methods li.google span {
   width: 64px;
-  background-image: url(../images/logos-sprite-64px.png);
+  background-image: url(../images/logos-sprite.png);
     background-position: -6px -342px;
 }
 
 ul.accepted-payment-methods li.maestro span {
   width: 64px;
-  background-image: url(../images/logos-sprite-64px.png);
+  background-image: url(../images/logos-sprite.png);
   background-position: -6px -426px;
 }
 ul.accepted-payment-methods li.mastercard span {
   width: 64px;
-  background-image: url(../images/logos-sprite-64px.png);
+  background-image: url(../images/logos-sprite.png);
   background-position: -6px -510px;
 }
 ul.accepted-payment-methods li.paypal span {
 	width: 64px;
-	background-image: url(../images/logos-sprite-64px.png);
+	background-image: url(../images/logos-sprite.png);
 	background-position: -6px -594px;
 }
 ul.accepted-payment-methods li.visa span {
 	width: 64px;
-	background-image: url(../images/logos-sprite-64px.png);
+	background-image: url(../images/logos-sprite.png);
 	background-position: -6px -678px;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1) {
   ul.accepted-payment-methods li.american-express span {
-    background-image: url(../images/logos@2x.png);
+    background-image: url(../images/logos-sprite@2x.png);
     background-size: 64px 64px;
+    background position: -16px -16px
   }
   ul.accepted-payment-methods li.bitcoin span {
-    background-image: url(../images/logos@2x.png);
+    background-image: url(../images/logos-sprite@2x.png);
     background-size: 64px 64px;
+    background position: -16px -248px
   }
     ul.accepted-payment-methods li.cash-on-delivery span {
-    background-image: url(../images/logos@2x.png);
+    background-image: url(../images/logos-sprite@2x.png);
     background-size: 64px 64px;
+    background position: -16px -496px
   }
   ul.accepted-payment-methods li.discover span {
-    background-image: url(../images/logos@2x.png);
+    background-image: url(../images/logos-sprite@2x.png);
     background-size: 64px 64px;
+    background position: -16px -728px
   }
   ul.accepted-payment-methods li.google span {
-    background-image: url(../images/logos@2x.png);
+    background-image: url(../images/logos-sprite@2x.png);
     background-size: 64px 64px;
+    background position: -16px -960px
   }
   ul.accepted-payment-methods li.maestro span {
-    background-image: url(../images/logos@2x.png);
+    background-image: url(../images/logos-sprite@2x.png);
     background-size: 64px 64px;
+    background position: -16px -1192px
   }
   ul.accepted-payment-methods li.mastercard span {
-    background-image: url(../images/logos@2x.png);
+    background-image: url(../images/logos-sprite@2x.png);
     background-size: 64px 64px;
+    background position: -16px -1424px
   }
   ul.accepted-payment-methods li.paypal span {
-    background-image: url(../images/logos@2x.png);
+    background-image: url(../images/logos-sprite@2x.png);
     background-size: 64px 64px;
+    background position: -16px -1656px
   }
   ul.accepted-payment-methods li.visa span {
-    background-image: url(../images/logos@2x.png);
+    background-image: url(../images/logos-sprite@2x.png);
     background-size: 64px 64px;
+    background position: -16px -1888px
   }
 }
