--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -100,47 +100,47 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) {
 		li.american-express span {
 			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
-      background position: -16px -16px;
+      background-position: -16px -16px;
 		}
 		li.bitcoin span {
 			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
-      background position: -16px -248px;
+      background-position: -16px -248px;
 		}
 		li.cash-on-delivery span {
 			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
-      background position: -16px -496px;
+      background-position: -16px -496px;
 		}
 		li.discover span {
 			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
-      background position: -16px -728px;
+      background-position: -16px -728px;
 		}
 		li.google span {
 			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
-      background position: -16px -960px;
+      background-position: -16px -960px;
 		}
 		li.maestro span {
 			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
-      background position: -16px -1192px;
+      background-position: -16px -1192px;
 		}
 		li.mastercard span {
 			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
-      background position: -16px -1424px;
+      background-position: -16px -1424px;
 		}
 		li.paypal span {
 			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
-      background position: -16px -1656px;
+      background-position: -16px -1656px;
 		}
 		li.visa span {
 			background-image: url(../images/logos-sprite@2x.png);
 			background-size: 64px 64px;
-      background position: -16px -1888px;
+      background-position: -16px -1888px;
 		}
 	}
 }
