--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -74,8 +74,12 @@ ul.accepted-payment-methods {
 			background-image: url(../images/bitcoin.png);
 		}
 		&.cash-on-delivery span {
-			width:47px;
+			width:27px;
 			background-image: url(../images/cod.png);
+		}
+		&.dakort span {
+			width:29px;
+			background-image: url(../images/dankort.png);
 		}
 	}
 }
@@ -121,7 +125,11 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) {
 		}
 		li.cash-on-delivery span {
 			background-image: url(../images/cod@2x.png);
-			background-size: 47px 16px;
+			background-size: 27px 16px;
+		}
+		li.dankort span {
+			background-image: url(../images/dankort@2x.png);
+			background-size: 29px 16px;
 		}
 	}
 
