--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -41,6 +41,7 @@ ul.accepted-payment-methods {
 			text-indent: -999em;
 			background-position:4px 4px;
 			background-repeat: no-repeat;
+			box-sizing: content-box;
 		}
 		&.visa span {
 			background-image: url(../images/visa.png);
