--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ ul.accepted-payment-methods li span {
   text-indent: -999em;
   background-position: 4px 4px;
   background-repeat: no-repeat;
+  box-sizing: content-box;
 }
 ul.accepted-payment-methods li.visa span {
   background-image: url(../images/visa.png);
